// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyntaxHighlighter render as text if language doesnt exist 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "print('hello')",
          ],
          "props": {},
          "type": "span",
        },
      ],
      "props": {
        "className": "language-text",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders fortran highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        "            C AREA OF A TRIANGLE WITH A STANDARD SQUARE ROOT FUNCTION
",
        "            C INPUT - TAPE READER UNIT 5, INTEGER INPUT
",
        "            C OUTPUT - LINE PRINTER UNIT 6, REAL OUTPUT
",
        "            C INPUT ERROR DISPLAY ERROR OUTPUT CODE 1 IN JOB CONTROL LISTING
",
        "                READ INPUT TAPE 5, 501, IA, IB, IC
",
        "            501 FORMAT (3I5)
",
        "            C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO
",
        "            C FURTHERMORE, THE SUM OF TWO SIDES OF A TRIANGLE
",
        "            C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO
",
        "                IF (IA) 777, 777, 701
",
        "            701 IF (IB) 777, 777, 702
",
        "            702 IF (IC) 777, 777, 703
",
        "            703 IF (IA+IB-IC) 777, 777, 704
",
        "            704 IF (IA+IC-IB) 777, 777, 705
",
        "            705 IF (IB+IC-IA) 777, 777, 799
",
        "            777 STOP 1
",
        "            C USING HERON'S FORMULA WE CALCULATE THE
",
        "            C AREA OF THE TRIANGLE
",
        "            799 S = FLOATF (IA + IB + IC) / 2.0
",
        "                AREA = SQRTF( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *
",
        "                +     (S - FLOATF(IC)))
",
        "                WRITE OUTPUT TAPE 6, 601, IA, IB, IC, AREA
",
        "            601 FORMAT (4H A= ,I5,5H  B= ,I5,5H  C= ,I5,8H  AREA= ,F10.2,
",
        "                +        13H SQUARE UNITS)
",
        "                STOP
",
        "                END
",
        "                   ",
      ],
      "props": {
        "className": "language-fortran",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders javascript highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "import React from "react";
",
          ],
          "props": {},
          "type": "span",
        },
        "import uniquePropHOC from "./lib/unique-prop-hoc";
",
        "
",
        "class Expire extends React.Component {
",
        "    constructor(props) {
",
        "        super(props);
",
        "        this.state = { component: props.children }
",
        "    }
",
        "    componentDidMount() {
",
        "        setTimeout(() => {
",
        "            this.setState({
",
        "                component: null
",
        "            });
",
        "        }, this.props.time || this.props.seconds * 1000);
",
        "    }
",
        "    render() {
",
        "        return this.state.component;
",
        "    }
",
        "}",
      ],
      "props": {
        "className": "language-javascript",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`SyntaxHighlighter renders text while language loads 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            C AREA OF A TRIANGLE WITH A STANDARD SQUARE ROOT ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "FUNCTION",
          ],
          "props": {
            "className": "hljs-function hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            C INPUT - TAPE READER ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "UNIT",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "5",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "INTEGER",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " INPUT
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            C OUTPUT - LINE PRINTER ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "UNIT",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "6",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "REAL",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " OUTPUT
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            C INPUT ERROR DISPLAY ERROR OUTPUT CODE ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "1",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IN",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " JOB CONTROL LISTING
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "                READ INPUT TAPE ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "5",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "501",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", IA, IB, IC
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "501",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "FORMAT",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "3",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "I5)
",
          ],
          "props": {},
          "type": "span",
        },
        "            C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO
",
        {
          "children": [
            "            C FURTHERMORE, THE ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "SUM",
          ],
          "props": {
            "className": "hljs-built_in",
          },
          "type": "span",
        },
        {
          "children": [
            " OF TWO SIDES OF A TRIANGLE
",
          ],
          "props": {},
          "type": "span",
        },
        "            C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO
",
        {
          "children": [
            "                ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IA) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "701",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "701",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IB) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "702",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "702",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IC) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "703",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "703",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IA+IB-IC) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "704",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "704",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IA+IC-IB) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "705",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "705",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "IF",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " (IB+IC-IA) ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            ", ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "799",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "777",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "STOP",
          ],
          "props": {
            "className": "hljs-keyword",
          },
          "type": "span",
        },
        {
          "children": [
            " ",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "1",
          ],
          "props": {
            "className": "hljs-number",
          },
          "type": "span",
        },
        {
          "children": [
            "
",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "            C USING HERON",
          ],
          "props": {},
          "type": "span",
        },
        {
          "children": [
            "'S FORMULA WE CALCULATE THE
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "            C AREA OF THE TRIANGLE
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "            799 S = FLOATF (IA + IB + IC) / 2.0
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                AREA = SQRTF( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                +     (S - FLOATF(IC)))
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                WRITE OUTPUT TAPE 6, 601, IA, IB, IC, AREA
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "            601 FORMAT (4H A= ,I5,5H  B= ,I5,5H  C= ,I5,8H  AREA= ,F10.2,
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                +        13H SQUARE UNITS)
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                STOP
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                END
",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
        {
          "children": [
            "                   ",
          ],
          "props": {
            "className": "hljs-string",
          },
          "type": "span",
        },
      ],
      "props": {
        "className": "language-gherkin",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;

exports[`When the code split is loaded - SyntaxHighlighter renders jsx highlighted text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "import React from "react";
",
          ],
          "props": {},
          "type": "span",
        },
        "  import uniquePropHOC from "./lib/unique-prop-hoc";
",
        "
",
        "  class Expire extends React.Component {
",
        "      constructor(props) {
",
        "          super(props);
",
        "          this.state = { component: props.children }
",
        "      }
",
        "      componentDidMount() {
",
        "          setTimeout(() => {
",
        "              this.setState({
",
        "                  component: null
",
        "              });
",
        "          }, this.props.time || this.props.seconds * 1000);
",
        "      }
",
        "      render() {
",
        "          return this.state.component;
",
        "      }
",
        "  }",
      ],
      "props": {
        "className": "language-javascript",
        "style": {
          "background": "none",
          "color": "black",
          "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        },
      },
      "type": "code",
    },
  ],
  "props": {
    "style": {
      "background": "rgb(245, 242, 240)",
      "color": "black",
      "fontFamily": "Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": "0.5em 0px",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    },
  },
  "type": "pre",
}
`;
